# GeneticAlgorithm

./: CMakeLists.txt
include/: Environment.h  Indiv.h
src/: Environment.cpp  Indiv.cpp  main.cpp
